# rostelecom_tree_segmentation

./: README.md  Техническое задание.txt
Desktop Local Delphi 10.4 Win64 7-10/: Install and Vetificated.txt  ReadMe.txt
Desktop Local Delphi 10.4 Win64 7-10/Win64/: ReadMe.txt
PreModel/: readme.txt
PreModel/Scripts/: Прототип.ipynb  Прототип_загрузка_модели_без_компиляции.ipynb
To work with point clouds/: Analysis of points in a las file.ipynb  Convert points from las format to voxels in vox format.ipynb  Image slicing.ipynb
command/: Chamkin.txt  Chebrov.txt  Kulagin.txt  Kuzin.txt  Larionov.txt  Madiyar Yergali.txt  Mikhalkevich.txt  Panfilov.txt  Smirnov.txt  Sokolov.txt  Tkachenko.txt  Uhanov.txt  Yakimov.txt  Yudin.txt  Zhevnerov.txt  raewsky
command/Dmitry_Panfilov/: .example.fastapi_app.py  README.md  fastapi_app.py
command/Dmitry_Panfilov/code/: .gitignore  config.py  main.py  metadata.py  routes.py  schemas.py  utils.py
command/Dmitry_Panfilov/code/Docker/: Dockerfile  README.md  docker-compose.yml
command/Dmitry_Panfilov/code/Telegram/: .env.json  README.DM  README.md  bot.py
command/Dmitry_Panfilov/code/model/: model.h5
command/Dmitry_Panfilov/code/poetry/: README.md  pyproject.toml  tree.txt
command/Dmitry_Panfilov/images/: .env.json
integration/: api_tools.py  main.py  requirements.txt
integration/templates/: index.html
made_images/: read.me  vydely_4000.tiff  vydely_5000.tiff  vydely_TLU.tiff
команда/: Chernyshov_G
