[tool.poetry]
name = "fastapi-poetry"
version = "0.1.0"
description = "TreeSegment"
authors = ["Dmitry <7292337@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
tensorflow = "^2.12.0"
fastapi = "^0.95.0"
requests = "^2.28.2"
pydantic = "^1.10.7"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
